refator and seo optimize, add guides for platforms

--- a/features/analytics.mdx
+++ b/features/analytics.mdx
@@ -1,30 +1,38 @@
 ---
-title: "Analytics"
-description: "Track form submission trends and performance"
+title: "Analytics for Form Submissions: A Deep Dive"
+description: "Learn how to use Heysheet's built-in analytics to track your form submissions. Get insights into your form's performance without any third-party tools."
 ---
 
+## Track Your Form Submissions with Built-in Analytics
 
-HeySheet gives you built-in analytics to help you understand how your forms are performing — without any third-party setup.
+Heysheet provides powerful, built-in **analytics for form submissions**, giving you valuable insights into how your forms are performing. This feature is available out of the box, so you don't need to integrate any third-party analytics tools.
 
----
+### Why Track Form Analytics?
 
-## ✅ What You Can Track
-
-- **Total Submissions**: Overall count of submissions received across all forms.
-- **Active Forms**: Number of currently active forms receiving submissions.
-- **Top Forms by Submissions**: See which forms are getting the most engagement.
-- **Submission Trends**: View submission activity over time in a clean, visual graph.
-- **Browser & Device Usage**: Know what platforms your audience is using.
-- **Geographic Insights**: Track which countries your submissions are coming from.
+Understanding your **form submission data** can help you:
+-   Identify your most popular forms.
+-   Optimize your forms for better conversion rates.
+-   Understand your audience's demographics and behavior.
+-   Detect and prevent spam submissions.
 
 ---
 
-## 📈 Dashboard Preview
+## What You Can Track with Heysheet Analytics
 
-Here’s what the analytics dashboard looks like in action:
+Our analytics dashboard provides a comprehensive overview of your form activity.
+
+-   **Total Submissions:** See the total number of submissions across all your forms.
+-   **Submission Trends:** Visualize your submission volume over time to identify patterns.
+-   **Top Performing Forms:** Discover which of your forms are the most successful.
+-   **Browser and Device Data:** Understand what technologies your audience is using.
+-   **Geographic Data:** See where your submissions are coming from.
 
 <img style={{ borderRadius: '0.5rem', marginTop: '1rem' }} src="https://ik.imagekit.io/q3ksr5fk3/image.png?updatedAt=1753434866415" alt="HeySheet Analytics Dashboard" />
 
 ---
 
-Still have questions? Head over to the [FAQ](/docs/faq) or reach out to us on Twitter [@heysheet](https://twitter.com/heysheet).
+## Privacy-Focused Analytics
+
+As a **privacy-friendly form backend**, we are committed to protecting the privacy of your users. Our analytics feature is designed to provide you with valuable insights without compromising user privacy. We do not track any personally identifiable information (PII) without consent, and we give you full control over your data.
+
+Heysheet is the **best form backend for developers** who value both data and privacy. Our **affordable form backend service** gives you the tools you need to succeed without breaking the bank.
