--- a/index.mdx
+++ b/index.mdx
@@ -1,50 +1,51 @@
 ---
-title: "Introduction"
-description: "Welcome to Heysheet — your central place for all developer documentation and guides"
+title: "Form to Google Sheets: The Easiest Form Backend | Heysheet"
+description: "The official documentation for Heysheet. Learn how to send any HTML form to Google Sheets, making it the best form backend for developers."
 ---
 
-# Welcome to Heysheet
+# Send Your Form to Google Sheets, Instantly
 
-**Heysheet** is the fastest way for developers to collect form submissions and send them directly to Google Sheets — with zero backend setup.
+**Heysheet** provides a powerful and simple **form backend for Google Sheets**. It's the fastest way for developers to collect form submissions and send them directly to Google Sheets or Notion with zero backend setup. Our **Google Sheets form API** is designed for simplicity and speed, letting you connect your frontend forms to a spreadsheet in minutes.
 
-Designed with simplicity and speed in mind, Heysheet lets you wire up frontend forms to Google Sheets in minutes using a secure API endpoint.
-
-Whether you're launching a marketing site, collecting leads, or building internal tools, Heysheet ensures your data lands instantly in your connected Sheet.
+Whether you're working with a **React form to Google Sheets**, a simple **HTML form to Google Sheets**, or any other stack, Heysheet ensures your data is captured reliably.
 
 <video autoPlay playsInline loop controls style={{ borderRadius: '0.5rem', width: '100%', marginTop: '1rem' }}>
 <source src="https://ik.imagekit.io/q3ksr5fk3/M_s%20video(3).mp4?updatedAt=1753415689177" type="video/mp4" />
 Your browser does not support the video tag.
 </video>
 
-## Why developers use Heysheet
+## Why Heysheet is the Best Form Backend
 
-- **Google Sheets Integration** — Instantly sync form data to any connected spreadsheet.
-- **No Backend Required** — Just call our API from your frontend — we handle the rest.
-- **Custom Frontends** — Use any tech stack (React, Vue, plain HTML, etc.) to build your form UI.
-- **Webhook-style Workflow** — Connect Heysheet to your Sheet like a serverless form handler.
-- **File Uploads** — Accept and store user-uploaded files (paid plans).
-- **Slack & Email Alerts** — Get notified instantly on new form submissions (paid plans).
-- **Secure API** — Each form has a unique, secure endpoint with spam protection.
-- **Submission Analytics** — Visual insights to track submissions and user behavior.
+- **Direct Google Sheets Integration**: Instantly sync form data to any connected spreadsheet.
+- **No Backend Required**: Use our **form submission API endpoint** from your frontend, and we handle the rest.
+- **Use Any Frontend**: Works with React, Vue, Svelte, or plain HTML to build your form.
+- **Affordable Alternative**: A **cheap alternative to SheetMonkey and Formspree** with a generous free tier.
+- **File Uploads**: Allow users to upload files through your forms.
+- **Notifications**: Get instant Slack and email alerts for new submissions.
+- **Secure API**: Every form has a unique, secure endpoint with spam protection.
+- **Analytics**: Track form performance with our built-in analytics.
 
-> ⚠️ Heysheet does **not store form responses**. Submissions go directly to your linked Google Sheet for full control and transparency.
-
----
-
-## What’s in this documentation
-
-- **Getting Started** — How to connect a Google Sheet and use the API
-- **API Reference** — Learn how to send data, upload files, and manage endpoints
-- **Authentication & Security** — Protect your form from spam and abuse
-- **Limits & Plans** — Understand the quota and features per plan
-- **Troubleshooting** — Fix common issues quickly
+> ⚠️ Heysheet does **not store your form responses**. All submissions go directly to your Google Sheet, giving you full control over your data.
 
 ---
 
-## Need help?
+## A Better Alternative to SheetMonkey and Formspree
+
+Heysheet is designed to be a more affordable and developer-friendly alternative to other form backend services. If you're looking for a **free Google Sheets form API** or a more powerful solution for your static site, Heysheet has you covered.
+
+---
+
+## What’s in This Documentation
+
+- **Getting Started**: Learn how to connect your form to Google Sheets.
+- **Platform Guides**: Step-by-step tutorials for HTML, React, Next.js, Vue, and Svelte.
+- **API Reference**: Detailed information on our **REST API for form data**.
+- **Features**: Explore file uploads, webhooks, and more.
+
+---
+
+## Need Help?
 
 We’re here to support you.
 
 Email us anytime at [support@heysheet.in](mailto:support@heysheet.in) or visit [heysheet.in](https://heysheet.in) for more info.
-
-Email us anytime at [support@heysheet.in](support@heysheet.in) or visit [heysheet.in](https://heysheet.in) for more information.
