--- a/guides/nextjs.mdx
+++ b/guides/nextjs.mdx
@@ -1,6 +1,5 @@
-
 ---
-title: "React Form to Google Sheets with Next.js | Heysheet"
+title: "React Form to Google Sheets with Next.js"
 description: "Learn how to connect a React form in your Next.js application to Google Sheets. A simple and powerful way to handle form submissions without a backend."
 ---
 
