--- a/guides/react.mdx
+++ b/guides/react.mdx
@@ -1,6 +1,5 @@
-
 ---
-title: "How to Send React Form Data to Google Sheets | Heysheet"
+title: "How to Send React Form Data to Google Sheets"
 description: "A comprehensive guide on connecting your React forms to Google Sheets using Heysheet. Handle form submissions in your React app without any backend code."
 ---
 
