--- a/guides/svelte.mdx
+++ b/guides/svelte.mdx
@@ -1,6 +1,5 @@
-
 ---
-title: "Svelte Form to Google Sheets | Heysheet"
+title: "Svelte Form to Google Sheets"
 description: "A guide on how to send form submissions from a Svelte application to Google Sheets using Heysheet. The easiest way to handle forms in your Svelte project."
 ---
 
