--- a/guides/vue.mdx
+++ b/guides/vue.mdx
@@ -1,6 +1,5 @@
-
 ---
-title: "Vue Form to Google Sheets | Heysheet"
+title: "Vue Form to Google Sheets"
 description: "Learn how to send form submissions from your Vue.js application to Google Sheets. A straightforward guide to connecting your Vue forms to a spreadsheet backend."
 ---
 
